syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "material_store.proto";
import "product_order.proto";

message WMSBillQueueInfo {
	//ID 
 	string id=1;
	//拣货单号 
 	string billNo=2;
	//任务单号 
    string taskNo=3;
	//物料仓库ID 
    string materialStoreID=4;
	//后续任务 
    MaterialStoreInfo materialStore=5;
	//生产工单号ID 
 	string productOrderID=6;
	//事务状态 
    ProductOrderInfo productOrder=7;
	//申请时间 
    string createTime=8;
	//申请人员ID 
 	string createUserID=9;
 	string createUserName=14;
	//当前状态 
    string currentState=10;
	//事务状态
    string transactionState=11;
	//状态变更时间 
    string lastUpdateTime=12;
	//备注
 	string remark=13;
}

message QueryWMSBillQueueRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // 创建时间开始 
	// @inject_tag: uri:"createTime0" form:"createTime0"
    string createTime0=4;
	// 创建时间结束 
	// @inject_tag: uri:"createTime1" form:"createTime1"
    string createTime1=5;
	// 物料仓库信息 
	// @inject_tag: uri:"materialStore" form:"materialStore"
    string materialStore=6;
}

message QueryWMSBillQueueResponse{
    Code code=1;
    string message=2;
    repeated WMSBillQueueInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllWMSBillQueueResponse{
    Code code=1;
    string message=2;
    repeated WMSBillQueueInfo data=3;
}

message GetWMSBillQueueDetailResponse{
    Code code=1;
    string message=2;
    WMSBillQueueInfo data=3;
}